--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -92,17 +92,17 @@ jobs:
       run: |
          az login -u kavya.nr@sonata-software.com -p Rameshkumar.123
         
-    # - name: acr import
-    #   run: |
-    #      az acr import  -n azuretoolsacr --source docker.io/20848/frontend:1.0.0 --image frontend:v1
+    - name: acr import
+      run: |
+         az acr import  -n azuretoolsacr --source docker.io/20848/frontend:1.0.0 --image frontend:v2
    
     - name: 🌐 kubectl apply deployment 
       run: |
           kubectl apply -f acr-nginx.yaml
    
-    # - name: pull
-    #   run: |
-    #     docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:v1
+    - name: pull
+      run: |
+        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:v2
 
     - name: ☸ tye deploy
       run: |
