--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -80,9 +80,9 @@ jobs:
 #           kubectl apply -f acr-nginx.yaml
       
         
-    # - name: 🌐 Install ingress-nginx
-    #   run: |
-    #     kubectl apply -f https://aka.ms/tye/ingress/deploy
+    - name: 🌐 Install ingress-nginx
+      run: |
+        kubectl apply -f https://aka.ms/tye/ingress/deploy
         
 #     - name: 🌐 kubectl apply deployment 
 #       run: |
