--- a/acr-backend.yaml
+++ b/acr-backend.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend-deployment
+  name: backend-deployment
   labels:
-    app: frontend
+    app: backend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: frontend
+      app: backend
   template:
     metadata:
       labels:
-        app: frontend
+        app: backend
     spec:
       containers:
-      - name: frontend
-        image: azuretoolsacr.azurecr.io/frontend:v2
+      - name: backend
+        image: azuretoolsacr.azurecr.io/backend:v1
         imagePullPolicy: Always
         ports:
         - containerPort: 80
