--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -94,7 +94,7 @@ jobs:
         
     - name: acr import
       run: |
-         az acr import  -n azuretoolsacr --source docker.io/20848/frontend:1.0.0 --image frontend:v5
+         az acr import  -n azuretoolsacr --source docker.io/20848/frontend:1.0.0 --image frontend:v6
 
    
     - name: 🌐 kubectl apply deployment 
@@ -102,9 +102,9 @@ jobs:
           kubectl apply -f acr-frontend.yaml
           
    
-    - name: pull
-      run: |
-        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:v5
+    # - name: pull
+    #   run: |
+    #     docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:v5
         
         
     - name: ☸ tye deploy
