--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -66,14 +66,14 @@ jobs:
 #         resource-group: ${{ env.AKS_RESOURCE_GROUP }}
      
       
-    - name: 🌐 kubectl apply
-      run: |
-        kubectl apply -f https://raw.githubusercontent.com/dotnet/tye/master/docs/tutorials/hello-tye/redis.yaml
+#     - name: 🌐 kubectl apply
+#       run: |
+#         kubectl apply -f https://raw.githubusercontent.com/dotnet/tye/master/docs/tutorials/hello-tye/redis.yaml
        
         
-    - name: 🌐 Install ingress-nginx
-      run: |
-        kubectl apply -f https://aka.ms/tye/ingress/deploy
+#     - name: 🌐 Install ingress-nginx
+#       run: |
+#         kubectl apply -f https://aka.ms/tye/ingress/deploy
         
 #     - name: 🌐 kubectl apply deployment 
 #       run: |
